# 2DplatformEngine

./: CMakeLists.txt  newclass
cpp/engine/: engine.cpp  gameScene.cpp
cpp/entity/: component.cpp  gameObject.cpp
cpp/event/: eventHandler.cpp
cpp/logging/: logger.cpp
cpp/renderer/: renderer.cpp
cpp/renderer/textures/: texture.cpp  texturesLoader.cpp
include/engine/: engine.h  gameScene.h
include/entity/: component.h  gameObject.h  transform.h
include/event/: eventHandler.h
include/logging/: logger.h
include/renderer/: renderable.h  renderer.h
include/renderer/textures/: texture.h  texturesLoader.h
tests/entity/: gameObject.cpp
tests/logging/: logger.cpp
tests/renderer/: renderable.cpp  renderer.cpp
tests/renderer/textures/: texturesLoader.cpp
